@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{673, 66}, {970, 1094}}</string>
+	<string>{{566, 64}, {970, 1094}}</string>
 </dict>
 </plist>
