@@ -4,7 +4,8 @@
 class ChatBox < OSX::NSBox
   include OSX
   
-  #objc_method :setFrame, 'v@:{_NSRect={_NSPoint=ff}{_NSSize=ff}}'
+  objc_alias_method 'superSetFrame:', 'setFrame:'    
+  objc_method :setFrame, 'v@:{_NSRect={_NSPoint=ff}{_NSSize=ff}}'
   def setFrame(rect)
     space = 3
     
@@ -26,6 +27,6 @@ class ChatBox < OSX::NSBox
     textframe.size.width = f.size.width
     text.setFrame(textframe)
     
-    super_setFrame(rect)
+    superSetFrame(rect)
   end
 end
